fixato l'overflow

--- a/stile.css
+++ b/stile.css
@@ -185,12 +185,12 @@ header {
     background-color: white;
 }
 
-/* FIXME: Overflow */
 .text {
     padding: 1em 1em 1.5em;
     border-radius: 7px;
     max-width: 220px;
     position: relative;
+    overflow-wrap: break-word;
 }
 
 .text .ora {
